--- a/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
@@ -10,7 +10,7 @@
   canBeAntag: false
   supervisors: cp14-job-supervisors-command
   weight: 2
-  setPreference: false #TEMP
+  setPreference: true
 
 - type: startingGear
   id: CP14GuardCommanderGear
