--- a/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
+++ b/Resources/Prototypes/_CP14/Roles/play_time_tracker.yml
@@ -13,10 +13,10 @@
   id: CP14JobInnkeeper
 
 - type: playTimeTracker
-  id: CP14JobCaptain
+  id: CP14JobGuardCommander
 
 - type: playTimeTracker
-  id: CP14JobGuardCommander
+  id: CP14JobGuard
 
 - type: playTimeTracker
   id: CP14JobCommandant
