--- a/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
@@ -15,4 +15,4 @@
 - type: startingGear
   id: CP14GuardCommanderGear
   equipment:
-    belt1: CP14KeyRingInnkeeper
+    belt1: CP14WalletFilledTest
