--- a/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard.yml
@@ -6,6 +6,10 @@
   startingGear: CP14GuardGear
   icon: "CP14JobIconGuard"
   supervisors: cp14-job-supervisors-guard-commander
+  special:
+  - !type:CP14AddSkillSpecial
+    skills:
+    - Warcraft
 
 - type: startingGear
   id: CP14GuardGear
