--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -158,6 +158,7 @@ CP14ClothingRingSphereOfLight: null
 CP14ClothingCloakSimpleWhite: null
 CP14ClothingCloakSimpleDarkBlue: null
 CP14ClothingCloakArmoredRed: CP14ClothingCloakGuardCommander
+CP14SpawnPointCaptain: null
 
 # <---> CrystallEdge migration zone end
 
