--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
@@ -7,22 +7,6 @@
   - type: Sprite
     sprite: _CP14/Markers/jobs.rsi
     snapCardinals: true
-    
-# Command
-
-- type: entity
-  id: CP14SpawnPointCaptain
-  parent: CP14SpawnPointJobBase
-  name: captain
-  categories:
-  - Spawner
-  components:
-  - type: SpawnPoint
-    job_id: CP14Captain
-  - type: Sprite
-    layers:
-      - state: green
-      - state: workman #TODO Replace
       
 # Security
 
@@ -38,7 +22,21 @@
   - type: Sprite
     layers:
       - state: green
-      - state: workman #TODO Replace
+      - state: guard_commander
+
+- type: entity
+  id: CP14SpawnPointGuard
+  parent: CP14SpawnPointJobBase
+  name: guard
+  categories:
+  - Spawner
+  components:
+  - type: SpawnPoint
+    job_id: CP14Guard
+  - type: Sprite
+    layers:
+      - state: green
+      - state: guard
 
 # Bank
 
