--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -138,6 +138,9 @@
   - type: InventorySlots
   - type: ContainerContainer
   - type: FloorOcclusion
+  - type: Tag
+    tags:
+      - CP14Mosquito
   - type: Inventory
     templateId: CP14Partial
     femaleDisplacements:
