--- a/Resources/Audio/_CP14/Animals/attributions.yml
+++ b/Resources/Audio/_CP14/Animals/attributions.yml
@@ -47,3 +47,13 @@
   license: "CC-BY-4.0"
   copyright: 'by GreatNate98 of Freesound.org. Cropped and mixed from stereo to mono.'
   source: "https://freesound.org/people/GreatNate98/sounds/586547/"
+
+- files: ["swarm.ogg"]
+  license: "CC0-1.0"
+  copyright: 'by bruno.auzet of Freesound.org. Cropped and mixed from stereo to mono.'
+  source: "https://freesound.org/people/bruno.auzet/sounds/578267/"
+
+- files: ["swarm_hit.ogg"]
+  license: "CC0-1.0"
+  copyright: 'by egomassive of Freesound.org.'
+  source: "https://freesound.org/people/egomassive/sounds/536728/"
