--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/base.yml
@@ -19,3 +19,9 @@
     locked: false
   - type: PlacementReplacement
     key: walls
+  - type: CP14DoorInteractionPopup
+    interactSound:
+      collection: CP14Doorknob
+      params:
+        variation: 0.03
+        volume: -5
