--- a/Resources/Prototypes/_CP14/Entities/Objects/Tools/torch.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Tools/torch.yml
@@ -87,3 +87,9 @@
       params:
         variation: 0.05
         volume: 10
+
+- type: entity
+  parent: CP14Torch
+  id: CP14TorchIgnited
+  components:
+  - type: CP14AutoIgnite
