--- a/Resources/Prototypes/_CP14/Entities/Objects/Economy/jewelry.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Economy/jewelry.yml
@@ -34,6 +34,9 @@
           ruby1: ""
           ruby2: ""
           ruby3: ""
+  - type: CP14ModularCraftPart
+    possibleParts:
+    - JewerlyRuby
 
 - type: entity
   parent: CP14BaseJewelry
@@ -55,6 +58,9 @@
           emerald2: ""
           emerald3: ""
           emerald4: ""
+  - type: CP14ModularCraftPart
+    possibleParts:
+    - JewerlyEmerald
 
 - type: entity
   parent: CP14BaseJewelry
@@ -75,6 +81,9 @@
           sapphire1: ""
           sapphire2: ""
           sapphire3: ""
+  - type: CP14ModularCraftPart
+    possibleParts:
+    - JewerlySapphire
 
 - type: entity
   parent: CP14BaseJewelry
@@ -93,3 +102,6 @@
     available:
       - random:
           topaz1: ""
+  - type: CP14ModularCraftPart
+    possibleParts:
+    - JewerlyTopaz
