--- a/Resources/Prototypes/_CP14/ModularCraft/slots.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/slots.yml
@@ -1,7 +1,7 @@
 - type: modularSlot
-  id: Grip
-  name: cp14-modular-slot-grip
-
-- type: modularSlot
   id: Blade
   name: cp14-modular-slot-blade
+
+- type: modularSlot
+  id: Jewerly1
+  name: cp14-modular-slot-jewerly1
