disassemble modular weapon

--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/grips.yml
@@ -12,6 +12,20 @@
   - type: CP14ModularCraftStartPoint
     startSlots:
     - Blade
+  - type: Damageable
+    damageContainer: Inorganic
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 50
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:CP14ModularDisassembleBehavior
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
 
 - type: entity
   parent: BaseItem
@@ -27,3 +41,17 @@
   - type: CP14ModularCraftStartPoint
     startSlots:
     - Blade
+  - type: Damageable
+    damageContainer: Inorganic
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 50
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: MetalBreak
+      - !type:CP14ModularDisassembleBehavior
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
